src/components/Reactions/Reactions.module.css
.reactions {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  overflow-x: hidden;
  padding: 0px 4px 0px 14px;
}
.allEmojis::-webkit-scrollbar {
  /* WebKit */
  width: 0;
  height: 0;
}
.allEmojis {
  display: flex;
  /* max-width: 60%; */
  flex-direction: row;
  overflow-x: scroll;
  width: 80%;
  flex-shrink: 1;
  overflow-x: scroll;
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* Internet Explorer 10+ */
}
.addReactionButtonContainer {
  margin-left: auto;
  display: flex;
  z-index: 1000;
  /* flex-grow: 2; */
}

